--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,30 @@
 .App-link {
   color: #61dafb;
 }
+.new-item-form {
+  display: flex;
+ 
+  gap: 0.5rem;
+}
+.new-item-form input {
+  outline: none !important;
+  border: 1px solid hsl(7, 100%, 40%) !important;
+  background: hsl(359, 100%, 30%) !important;
+  border-radius: 0.25em !important;
+  padding: 0.25em 0.5em !important;
+  color: hsl(200, 100%, 90%) !important;
+}
+
+
+.gtr {
+  background: hsla(0, 100%, 50%, 0.1);
+  border: 1px solid hsl(0, 100%, 50%);
+  color: hsl(200, 100%, 50%);
+  padding: 0.25em 0.5em;
+  border-radius: 0.25em;
+  cursor: pointer;
+  outline: none;
+}
 
 @keyframes App-logo-spin {
   from {
